--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && echo Build completed. Output directory: out",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "node -e \"console.log('Output directory exists:', require('fs').existsSync('out'))\""
   },
   "dependencies": {
     "next": "14.2.35",
