--- a/.hostinger.yml
+++ b/.hostinger.yml
@@ -1,5 +1,5 @@
 build:
-  install: npm ci
-  command: npm run build
+  install: echo "Skipping install - using pre-built files"
+  command: echo "Using pre-built out folder"
   publish: out
   node_version: 18
