--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && echo Build completed. Output directory: out",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "node -e \"console.log('Output directory exists:', require('fs').existsSync('out'))\""
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.2.35",
