--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,27 +13,27 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/icon-light-32x32.png",
+      "src": "/favicone.png",
       "sizes": "32x32",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-dark-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/apple-icon.png",
+      "src": "/favicone.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
+      "src": "/favicone.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/favicone.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
@@ -54,7 +54,7 @@
       "url": "/contact",
       "icons": [
         {
-          "src": "/icon-light-32x32.png",
+          "src": "/favicone.png",
           "sizes": "32x32"
         }
       ]
@@ -66,7 +66,7 @@
       "url": "/services",
       "icons": [
         {
-          "src": "/icon-light-32x32.png",
+          "src": "/favicone.png",
           "sizes": "32x32"
         }
       ]
